fix: stories max-width too small

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -33,7 +33,7 @@ section .content .center {
 }
 
 section .content .center .stories {
-    max-width: 5rem;
+    max-width: 30rem;
     overflow-x: scroll;
 }
 
